US3685 - Forgot Password Step 1 : TA8724 - Updated text labels and removed some unnecessary XML from the layout. DE1592 FIXED - Updated error text. DE1595 FIXED - updated text. Moved date picker logic from AbstractAccountInformationActivity into the custom date picker classes. They now work much better too, they allow focusing, which will cause the previous field that was focused to update on it self (properly).

--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="empty"></string>
     <string name="home_text">Home</string>
     <string name="doesnt_match_records">Doesn\'t Match Our Records</string>
-    <string name="invalid_input">Invalid input</string>
+    <string name="invalid_input">Invalid Value</string>
     <string name="forgot_pass_create_new_text">Create a New Password:</string>
     <string name="forgot_pass_step_two_text">Step 2 of 2: Create New Password</string>
     <string name="max_attempts_exceeded_text">You have Exceeded the Maximum Number of Unsuccessful Attempts.
