--- a/Phone/main/res/values/strings.xml
+++ b/Phone/main/res/values/strings.xml
@@ -84,5 +84,5 @@
     <string name="upgrade_dialog_button_text">Get the Latest App</string>
     <string name="no_thanks">No Thanks</string>
     <string name="ok">OK</string>
-
+	<string name="error_strongauth_noanswer">Please enter a valid value and try again.</string>
 </resources>
