--- a/Commons/main/res/values/strings.xml
+++ b/Commons/main/res/values/strings.xml
@@ -119,6 +119,10 @@
 	<string name="lockout_title">You\'ve Been Locked Out</string>
     <string name="doesnt_match_records">Doesn\'t Match Our Records</string>
     <string name="privacy_terms">Privacy &amp; Terms</string>
-    
-    
+     <string name="bank_account_summary">Account Summary</string>
+    <string name="bank_open_account">Open an Account</string>
+    <string name="bank_under_development">Under Development</string>
+    <string name="bank_open_account_details">When you open up a Discover\nBank Account you\'ll enjoy\ncompetitive online banking rates that\nhelp you earn and manage your money\nfrom your mobile device.</string>
+    <string name="bank_open_browser_title">You\'re Leaving this Page</string>
+    <string name="bank_open_browser_text">The page your are about to view is not optimized for mobile devices. Tap Continue to view this page on discover.com</string> 
 </resources>
