Fixing defects found from integration work
Updated Typo's in error message for forgot/register
Updated spacing for the login activity footer
Updated Bank error code to account for updated API with wrong user information
Updated input text fields to add padding to the x drawable and not to fill the screen when in landscape.

--- a/Discover-Bank-Phone/res/values/strings.xml
+++ b/Discover-Bank-Phone/res/values/strings.xml
@@ -15,7 +15,7 @@
     
     <string name="year_hint">YYYY</string>
     <string name="secure_login">Secure Credit Card Log In</string>
-    <string name="register_now">Register Now </string>
+    <string name="register_now">Register \nNow </string>
     <string name="card_login_button_text">Secure Credit Card Login</string>
     <string name="image_description">Discover</string>
     <string name="strength_bar_text">Strength!</string>
