--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -134,4 +134,5 @@
     <string name="bank_yes_delete">Yes, Delete</string>
     <string name="bank_status_image_descr">Status Indicator</string>
     <string name="bank_pmt_deleted">Scheduled Transaction Deleted</string>
+    <string name="edit_title">EDIT</string>
 </resources>
