ID: DE2247 Strong Auth Wrap-up: Remove Provide Feedback, as per Acceptance Criteria ID: DE2248 Strong Auth Wrap-up: Spacing of green checkmark Baseline ID: DE2249 Strong Auth Wrap-up: Spacing of green checkmark Non-baseline
Tested:
- Verified Feedback link is not shown in strong auth page
- Verified distance of check box to text look like comps on a Nexus
- Verified new string for when user enters an empty string "The answer does not match your Account information."

--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -113,7 +113,7 @@
     <string name="go_back">Go back</string>
     <string name="logout">Logout</string>
     <string name="problem_authenticating">There was a problem authenticating your registration information.</string>
-    <string name="error_strongauth_noanswer">Please enter the Challenge Answer.</string>
+    <string name="error_strongauth_noanswer">The answer does not match your Account information.</string>
 	<string name="error_request_not_completed_title">Your Request Could Not Be Completed</string>
 	<string name="error_request_not_completed_msg">We\'re sorry. We can\'t complete your request at this time. Please contact us for more information.</string>
 	<string name="lockout_title">You\'ve Been Locked Out</string>
