--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -123,7 +123,7 @@
     <string name="bank_open_account">Open an Account</string>
     <string name="bank_under_development">Under Development</string>
     <string name="bank_open_account_details">When you open up a Discover\nBank Account you\'ll enjoy\ncompetitive online banking rates that\nhelp you earn and manage your money\nfrom your mobile device.</string>
-    <string name="bank_open_browser_title">You\'re Leaving this Page</string>
+    <string name="bank_open_browser_title">You\'re Leaving this Application</string>
     <string name="bank_open_browser_text">The page your are about to view is not optimized for mobile devices. Tap Continue to view this page on discover.com</string>
     <string name="bank_pmt_make_another">Make Another Payment</string> 
     <string name="bank_pmt_review">Review Payments</string>
