--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -135,4 +135,5 @@
     <string name="bank_status_image_descr">Status Indicator</string>
     <string name="bank_pmt_deleted">Scheduled Transaction Deleted</string>
     <string name="edit_title">EDIT</string>
+    <string name="caret_description">Actionable field caret</string>
 </resources>
