ID: DE2579 - User Has No Accounts - overlapping text and button DE2580 - User Has No Accounts - phone number is not tappable DE2586 - User Has No Accounts - distance issues between elements DE2585 - User Has No Accounts - no status bar DE2584 - User Has No Accounts - Body text does not match comps. DE2590 - User Has No Accounts - elements need to be centered DE2589 - User Has No Accounts - provide feedback font size too big DE2583 - User Has No Accounts - Open an Account button not centered DE2582 - User Has No Accounts - indenting for body text should be changed DE2578 - User Has No Accounts - Menu icon appears when user logs out DE2576 - User Has No Accounts - No help icon DE2597 - Open A New Account and Open an Account buttons - slight changes
Tested:
- Verified no overlapping of button and feedback text in Open Account Summary in both portrait / landscape orientations
- Verified Open Account Summary in both portrait and landscape
- Verified phone number in Bank Open Account Summary opens dialer with right number when tapped
- Verified phone number in Bank Account Summary opens dialer with right number when tapped
- Verified spacing between elements in Open Account Summary page as per comp
- Verified status bar in both Open Account Summary and with Account Summary pages
- Verified body text in Open Account Summary matches comps
- Verified elements are centered in Open Account Summary page
- Verified Menu icon is not displayed when logging out and user has no accounts
- Verified Open Account Summary page shows status bar with help icon
- Verified Open account summary shows "Open an Account" and Account summary shows "Open a New Account"

--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -122,8 +122,9 @@
     <string name="privacy_terms">Privacy &amp; Terms</string>
      <string name="bank_account_summary">Account Summary</string>
     <string name="bank_open_account">Open an Account</string>
+    <string name="bank_open_new_account">Open a New Account</string>
     <string name="bank_under_development">Under Development</string>
-    <string name="bank_open_account_details">When you open up a Discover\nBank Account you\'ll enjoy\ncompetitive online banking rates that\nhelp you earn and manage your money\nfrom your mobile device.</string>
+    <string name="bank_open_account_details">Open up a Discover Bank Account and enjoy competitive online banking rates. You can earn and manage your money right from your mobile device.</string>
     <string name="bank_open_browser_title">You\'re Leaving this Application</string>
     <string name="bank_open_browser_text">The page you are about to view is not optimized for mobile devices. Tap Continue to view this page on discover.com</string>
     <string name="bank_pmt_make_another">Make Another Payment</string> 
