--- a/Discover-Bank-Phone/res/values/strings.xml
+++ b/Discover-Bank-Phone/res/values/strings.xml
@@ -44,6 +44,8 @@
     <string name="upgrade_dialog_button_text">Get the Latest App</string>
     <string name="no_thanks">No Thanks</string>
     <string name="ok">OK</string>
-	
     <string name="bank_account_summary">Account Summary</string>
+    <string name="bank_callmodal_title">Your Session May End</string>
+    <string name="bank_callmodal_msg">If you dial for help Discover may end your session to protect your security. You will have to log back in to complete your transaction.</string>
+    <string name="bank_callmodal_action">Call Now</string>
 </resources>
