--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -138,4 +138,5 @@
     <string name="bank_pmt_deleted">Scheduled Transaction Deleted</string>
     <string name="edit_title">EDIT</string>
     <string name="caret_description">Actionable field caret</string>
+    <string name="account_ending_in">Ending in </string>
 </resources>
