US5761 - TA14857 : TA14858 - Transfer Money select account. Implemented the select account feature. Implemented the internal and external account lists that a user can select from. Implemented the feature that prevents them from selecting the same account twice. If only two accounts exist it will automatically select the pair of accounts. It also notifies the user that they cannot transfer between two external accounts and gives them a special navigation option to change this. This commit includes the service calls for getting the external payees and submitting the transfer.

--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -102,7 +102,7 @@
     
     <string name="enter_info">Enter Info</string>
     <string name="create_password">Create Password</string>
-    <string name="confirm">Confirmation</string>
+    <string name="confirm">Confirm</string>
     <string name="close_text">Close</string>
     <string name="empty"></string>
     <string name="feedback_text">Provide Feedback</string>
