ID: US7675 - Android: Loses Network Connectivity Modal
Tested:
Login
- Verified if no connection at login retry will send login when connection is restored.
- Verified if no connection at Strong Auth retry will send strong request when connection is restored

Accounts:
- Verified if no connection at Get Posted Account Activity download shows No Connection modal
- Verified Discover Client sends Get Posted Account Activity when connection is restored, retry button is clicked on
No Connection Modal and Get Account Posted Activity is the last call
- Verified if no connection at Get Scheduled Account Activity download shows No Connection modal
- Verified Discover Client sends Get Scheduled Account Activity when connection is restored, retry button is clicked on No Connection Modal,
and get Account Scheduled Activity is the last call.
- Verified Discover client shows No Connection Error Modal when attempting to Load More Account Activity and no connection

--- a/Discover-Bank-Phone/res/values/strings.xml
+++ b/Discover-Bank-Phone/res/values/strings.xml
@@ -47,4 +47,9 @@
     <string name="bank_callmodal_title">Your Session May End</string>
     <string name="bank_callmodal_msg">If you dial for help Discover may end your session to protect your security. You will have to log back in to complete your transaction.</string>
     <string name="bank_callmodal_action">Call Now</string>
+    
+    <!-- Network Connection Error Strings  -->
+    <string name="bank_network_connection_error_title">Network Connection Error</string>
+    <string name="bank_network_connection_error_body">The internet connection appears to be offline at this moment. In order to login and access the features of the application you will need internet connectivity. Please check your device settings and try again once the connection has been restored.</string>
+    <string name="bank_network_connection_error_action">Retry</string>
 </resources>
