ID: US7881 - Android: Add Phone Numbers to Certain Modals ID: DE4199 - Update 500 Error Modal Text - some cosmetic issues. ID: DE4211 - Manage Payees - Unable to Add Manage Payee ID: DE4224 - Server Inline Errors not showing for Managed/Unmanaged Payee ID: DE4206 - Android: Contact Us/Customer Service - cosmetic issue and link needs to be added
Verified:
- verified catch all modal matches AC
- Verified capability of adding managed and unmanaged payee.
- Verified help number shown in catch all modal always
- Verified help number not shown when receiving an error message without any phone number.
- Verified help number shown when receiving an error message with a phone number, and the number displayed is that sent from server.
- Verified inline errors displayed for managed and unmanaged payees using mock service
- Verify By Mail and By Phone text style match in Contact Us Page
- Verify Provide Feedback  and Privacy and terms displayed in Contact Us Page.

--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -116,8 +116,8 @@
     <string name="logout">Logout</string>
     <string name="problem_authenticating">There was a problem authenticating your registration information.</string>
     <string name="error_strongauth_noanswer">The answer does not match your Account information.</string>
-	<string name="error_request_not_completed_title">Your Request Could Not Be Completed</string>
-	<string name="error_request_not_completed_msg">Some of our website features are unavailable at this time. We sincerely apologize for the inconvenience and are working to resolve the issue.</string>
+	<string name="error_request_not_completed_title">Your Request Cannot Be Completed</string>
+	<string name="error_request_not_completed_msg">Some of our website features are unavailable at this time. We sincerely apologize for the inconvenience and are working to resolve the issue. Please contact us for more information.</string>
 	<string name="lockout_title">You\'ve Been Locked Out</string>
     <string name="doesnt_match_records">Doesn\'t Match Our Records</string>
     <string name="privacy_terms">Privacy &amp; Terms</string>
