--- a/Discover-Bank-Phone/res/values/strings.xml
+++ b/Discover-Bank-Phone/res/values/strings.xml
@@ -50,7 +50,7 @@
     
     <!-- Network Connection Error Strings  -->
     <string name="bank_network_connection_error_title">Network Connection Error</string>
-    <string name="bank_network_connection_error_body">The internet connection appears to be offline at this moment. In order to login and access the features of the application you will need internet connectivity. Please check your device settings and try again once the connection has been restored.</string>
+    <string name="bank_network_connection_error_body">The Internet connection appears to be offline at this moment. Please check your device setting and try again once the connection has been restored.</string>
     <string name="bank_network_connection_error_action">Retry</string>
     
     <!-- SSO modal string -->
