ID: DE5288 ATM Locator - City missing from ATM Details (QC#95801) ID: DE5289 Account nickname spills over cell in Acct Summary & Check Deposit (QC#95799) ID: DE5288 ATM Locator - City missing from ATM Details (QC#95801)
Tested:
Verified ATM Located Balloons shows address, city, state, and zip
Verified Nickname in Account view in Account Summary page does not exceed 22 characters
Verified application does not crash when viewing google terms of use

--- a/Discover-Bank-Phone/res/values/strings.xml
+++ b/Discover-Bank-Phone/res/values/strings.xml
@@ -57,4 +57,7 @@
     <string name="sso_bad_bank_status_title">We\'re Sorry</string>
     <string name="sso_bad_bank_status_content">Due to special conditions related to your bank account, we can\'t provide you with access to your bank account at this time.  To login to Discover Card only please select Continue below.</string>
 	<string name="sso_bad_bank_button">Continue</string>
+	
+	<!--General Strings  -->
+	<string name="ellipsis">...</string>
 </resources>
