--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -137,6 +137,7 @@
     <string name="bank_yes_delete">Yes, Delete</string>
     <string name="bank_delete_transfer_title">Delete Transaction?</string>
     <string name="bank_delete_transfer_text">Are you sure you want to delete this transaction?</string>
+    <string name="bank_delete_transfer_series_text">Are you sure you want to delete this series of transactions?</string>
     <string name="bank_status_image_descr">Status Indicator</string>
     <string name="bank_pmt_deleted">Scheduled Transaction Deleted</string>
     <string name="edit_title">EDIT</string>
