ID: DE5885 - (Copy of) Delete Series Transfer ( US8262 ) - cosmetic modal defect ID: DE5884 - Transfer Money and Pay Bills - tapping quickly on calendar brings up 2 calendars, one which doesn't close.
Verified:
- Title in transfer delete modal is correct for one time transfer
- Title in transfer delete modal is correct for deleting all reocurring transfer
- Title in transfer delete modal is correct for deleting next in series transfer
- Tested calendar is not recreated in transfers work-flow when double tapping send on or frequency calendar
- Tested calendar is not recreated in schedule payment work-flow double tapping

--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -136,6 +136,7 @@
     <string name="bank_delete_transaction_text">Are you sure you want to delete this scheduled payment?</string>
     <string name="bank_yes_delete">Yes, Delete</string>
     <string name="bank_delete_transfer_title">Delete Transaction?</string>
+    <string name="bank_delete_transfers_title">Delete Transactions?</string>
     <string name="bank_delete_transfer_text">Are you sure you want to delete this transaction?</string>
     <string name="bank_delete_transfer_series_text">Are you sure you want to delete this series of transactions?</string>
     <string name="bank_status_image_descr">Status Indicator</string>
