--- a/Discover-Card-Phone/res/values/strings.xml
+++ b/Discover-Card-Phone/res/values/strings.xml
@@ -90,11 +90,11 @@
     <!-- Fastcheck  Viewing Prior to Login -->
     <string name ="back_button_text">Back</string>
 	<string name="fast_check_token_key_in_ps">FastcheckToken</string>
-	<string name="fast_check_error_tech_diff">We\'re currently experiencing techincally difficult. We apologize for any incovenience.</string>
+	<string name="fast_check_error_tech_diff">We\'re currently experiencing techincal difficult. We apologize for any incovenience.</string>
 	<string name="fast_check_error_cannot_access">Due to special condition related to your account, this page is not available.\n\nPlease contact customer service.</string>
 	<string name="fast_check_error_no_token">You recently requested to disable your quick view settings. If you\'d like to enable this option, plese login and navigate to
 						\"Quick View\" under Profile and Settings.</string>
-	<string name="fast_check_rewards_outage_msg">Cashback Bonus cannot be updated at this time.</string>
+	<string name="fast_check_rewards_outage_msg">Rewards Balance cannot be updated at this time.</string>
 	<string name="fast_check_salutation_good_morning">Good morning, </string>
 	<string name="fast_check_salutation_good_afternoon">Good afternoon, </string>
 	<string name="fast_check_salutation_good_evening">Good evening, </string>
@@ -103,6 +103,8 @@
 	<string name="fast_check_error_img_desc">error</string>
 	<string name="fast_check_detail_databean">FastcheckDetailDataBean</string>
 	<string name="fast_check_last_retrieval_time_in_ms">FastcheckLastRetrievalTimeInMS</string>
+	<string name="fast_check_credit_line_available">Credit Line Available</string>
+	<string name="fast_check_cashback_bonus"><i>Cashback Bonus</i></string>
 	
 	 <!-- CARD TYPE FOR TOOL TIP MENU -->
     <string name="card_type_more">More Card </string>
