--- a/Discover-Card-Phone/res/values/strings.xml
+++ b/Discover-Card-Phone/res/values/strings.xml
@@ -89,7 +89,7 @@
     
     <!-- Fastcheck  Viewing Prior to Login -->
     <string name ="back_button_text">Back</string>
-	<string name="fast_check_token_key_in_ps">FastcheckToken</string>
+	<string name="fast_check_token_key_in_ps">FastcheckToken1.0</string>
 	<string name="fast_check_error_tech_diff">We\'re currently experiencing techincal difficult. We apologize for any incovenience.</string>
 	<string name="fast_check_error_cannot_access">Due to special condition related to your account, this page is not available.\n\nPlease contact customer service.</string>
 	<string name="fast_check_error_no_token">You recently requested to disable your quick view settings. If you\'d like to enable this option, plese login and navigate to
@@ -127,7 +127,7 @@
     <string name="register_btn">Register Now</string>
      <!-- Quick information -->
     <string name="quick_view_info">Turn on to view your current balance, credit line available and <i>Cashback Bonus</i> balance without having to log in. </string>
-    <string name="quick_view_info_miles">Turn on to view your current balance, credit line available and <i>Miles balance</i> without having to log in. </string>
+    <string name="quick_view_info_miles">Turn on to view your current balance, credit line available and Miles balance without having to log in. </string>
     <string name="quick_view_info_dbc_corp">Turn on to view your current balance, credit line available without having to log in. </string>
     <string name="quick_view_info_on">On the login screen tap the Quick view button, or swipe to see your account information.</string>
     <string name="quick_view_faq">Quick view FAQ</string>
