--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -146,4 +146,8 @@
     <string name="account_ending_in">Ending in </string>
      <string name="card_divider">|</string>
     <string name="register_btn">Register</string>
+    
+    <!-- toggle switch strings -->
+    <string name="textOff">Off</string>
+    <string name="textOn">On</string>
 </resources>
