--- a/Discover-Card-Phone/res/values/strings.xml
+++ b/Discover-Card-Phone/res/values/strings.xml
@@ -90,21 +90,22 @@
     <!-- Fastcheck  Viewing Prior to Login -->
     <string name ="back_button_text">Back</string>
 	<string name="fast_check_token_key_in_ps">FastcheckToken1.0</string>
-	<string name="fast_check_error_tech_diff">We\'re currently experiencing techincal difficult. We apologize for any incovenience.</string>
-	<string name="fast_check_error_cannot_access">Due to special condition related to your account, this page is not available.\n\nPlease contact customer service.</string>
-	<string name="fast_check_error_no_token">You recently requested to disable your quick view settings. If you\'d like to enable this option, plese login and navigate to
+	<string name="fast_check_error_tech_diff">We\'re currently experiencing technical difficulties. We apologize for any incovenience.</string>
+	<string name="fast_check_error_cannot_access">Due to special conditions related to your account, this page is not available.&lt;br/&gt;&lt;br/&gt;Please contact customer service at &lt;a href=\"tel://18003472683\"&gt;1&#8211;800&#8211;347&#8211;2683&lt;/a&gt; for assistance.</string>
+	<string name="fast_check_error_no_token">You recently requested to disable your quick view settings. If you\'d like to enable this option, please log in and navigate to
 						\"Quick View\" under Profile and Settings.</string>
 	<string name="fast_check_rewards_outage_msg">Rewards Balance cannot be updated at this time.</string>
-	<string name="fast_check_salutation_good_morning">Good morning, </string>
-	<string name="fast_check_salutation_good_afternoon">Good afternoon, </string>
-	<string name="fast_check_salutation_good_evening">Good evening, </string>
+	<string name="fast_check_salutation_good_morning">Good morning,</string>
+	<string name="fast_check_salutation_good_afternoon">Good afternoon,</string>
+	<string name="fast_check_salutation_good_evening">Good evening,</string>
 	<string name="fast_check_spinner_msg_part1">Discover</string>
 	<string name="fast_check_spinner_msg_part2">Retrieving Quick view&#8230;</string>
 	<string name="fast_check_error_img_desc">error</string>
 	<string name="fast_check_detail_databean">FastcheckDetailDataBean</string>
+	<string name="fast_check_maintenance_msg">FastcheckMaintenanceMsg</string>
 	<string name="fast_check_last_retrieval_time_in_ms">FastcheckLastRetrievalTimeInMS</string>
 	<string name="fast_check_credit_line_available">Credit Line Available</string>
-	<string name="fast_check_cashback_bonus"><i>Cashback Bonus</i></string>
+	<string name="fast_check_cashback_bonus">&lt;i&gt;Cashback Bonus&lt;/i&gt; Balance</string>
 	
 	 <!-- CARD TYPE FOR TOOL TIP MENU -->
     <string name="card_type_more">More Card </string>
@@ -132,6 +133,7 @@
     <string name="quick_view_info_on">On the login screen tap the Quick view button, or swipe to see your account information.</string>
     <string name="quick_view_faq">Quick view FAQ</string>
     <string name="quick_view_detail">Another account has their settings enabled to view their account information without logging in on this device. Would you like to disable the settings for that account and enable them for this account?</string>
-    <string name="no_thank">No thanks</string>
+    <string name="no_thank">No,thanks</string>
     <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
