--- a/Discover-Card-Phone/res/values/strings.xml
+++ b/Discover-Card-Phone/res/values/strings.xml
@@ -133,7 +133,7 @@
     <string name="quick_view_info_on">On the login screen tap the Quick view button, or swipe to see your account information.</string>
     <string name="quick_view_faq">Quick view FAQ</string>
     <string name="quick_view_detail">Another account has their settings enabled to view their account information without logging in on this device. Would you like to disable the settings for that account and enable them for this account?</string>
-    <string name="no_thank">No,thanks</string>
+    <string name="no_thank">No Thanks</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
 </resources>
