--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -148,6 +148,6 @@
     <string name="register_btn">Register</string>
     
     <!-- toggle switch strings -->
-    <string name="textOff">Off</string>
+    <string name="textOff">OFF</string>
     <string name="textOn">On</string>
 </resources>
