DE6928 - Updated the ON text for the save user id switch to be in all caps, like the OFF switch text.

--- a/Discover-Commons/res/values/strings.xml
+++ b/Discover-Commons/res/values/strings.xml
@@ -149,5 +149,5 @@
     
     <!-- toggle switch strings -->
     <string name="textOff">OFF</string>
-    <string name="textOn">On</string>
+    <string name="textOn">ON</string>
 </resources>
